🐛 fix(minor): feat dark mode

--- a/app/globals.css
+++ b/app/globals.css
@@ -383,8 +383,30 @@
     --social-tidal: #fff;
     --social-amazon: #fff;
     --social-zendesk: #fff;
+
+
+
+      /* dark */
+
+      
+    
   }
   /*#endregion Colors */
+}
+
+@layer base {
+  :root{
+    --bg-background-body: 247 247 247;
+    --bg-sub-background: 255 255 255;
+    --bg-btn-background: 255 255 255;
+    --bg-border-decoration: 224 224 224;
+  }
+  [data-theme="dark"]{
+    --bg-background-body: 26 26 29;
+    --bg-sub-background:38 39 47;
+    --bg-btn-background: 38 39 47;
+    --bg-border-decoration: 131 131 131;
+  }
 }
 
 /* custom scale for Remix Icon */
@@ -397,7 +419,7 @@
   --tw-full-bleed-border-bottom-width: 1px;
 }
 .bleed-ln-gray-200 {
-  --tw-full-bleed-color: #e0e0e0;
+  --tw-full-bleed-color: var(--bg-border-decoration);
 }
 .bleed-border-b {
   border-image: linear-gradient(var(--tw-full-bleed-color) 0 0) 1; /* 0 9999vw 0 9999vw */
@@ -440,7 +462,7 @@
 
 .bg-ln-gray-25 {
   --tw-bg-opacity: 1;
-  background-color: rgb(247 247 247 / var(--tw-bg-opacity));
+  background-color: rgb(var(--bg-background-body) / var(--tw-bg-opacity));
 }
 .bg-bg-weak-50{
   --tw-bg-opacity: 1;
@@ -516,12 +538,12 @@
   }
 }
 
-@media (min-width: 1024px) {
-  .lg\:bg-ln-gray-0 {
+
+  .bg-ln-gray-0 {
       --tw-bg-opacity: 1;
-      background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
+      background-color: rgb(var(--bg-sub-background) / var(--tw-bg-opacity, 1));
   }
-}
+
 
 .header-main{
   border: 1px solid hsl(0 0% 75% / 0.5);
@@ -542,7 +564,7 @@
   --gray-0: 255 255 255;
   --neutral-0: var(--gray-0);
   --bg-white-0: var(--neutral-0);
-  background-color: rgb(var(--bg-white-0));
+  background-color: rgb(var(--bg-btn-background));
 }
 .ring-0, .ring-1 {
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
